corrected spacing on index page

--- a/wwwroot/css/index.css
+++ b/wwwroot/css/index.css
@@ -24,15 +24,11 @@ header {
     min-height: 65vh;
     max-height: 75vh;
     max-width: 100vw;
-    padding-top: 75px;
+    padding-top: 150px;
     color: #101010;
     letter-spacing: .1em;
     font-size: 3em;
     text-shadow: -1px -1px 1px #000, 2px 2px 1px #262626;
-}
-
-h1 {
-    padding-top: 25px;
 }
 
 #begin {
@@ -47,7 +43,7 @@ section {
     display: flex;
     flex-direction: row;
     position: absolute;
-    bottom: 25px;
+    bottom: 35px;
 }
 
 .nav:hover, #privacy:hover {
